--- a/TotalCrossVM/builders/build.xml
+++ b/TotalCrossVM/builders/build.xml
@@ -255,18 +255,18 @@ target: buildInstalls - run installshield to create the SDK and Samples
 <target name="reorganizeSamples" >
   <property name="samples"  value="${target.sdk3.path}/dist/samples/"/>
 
-  <move todir="${samples}/app/Breakout"    > <fileset dir="${samples}/Breakout"/>    </move>
-  <move todir="${samples}/app/Scape"       > <fileset dir="${samples}/Scape"/>       </move>
-  <move todir="${samples}/app/Calculator"  > <fileset dir="${samples}/Calculator"/>  </move>
-  <move todir="${samples}/app/BtChat"      > <fileset dir="${samples}/BtChat"/>      </move>
-  <move todir="${samples}/app/WorldWatch"  > <fileset dir="${samples}/WorldWatch"/>  </move>
-
-  <move todir="${samples}/service/GPSLogger"           > <fileset dir="${samples}/GPSLogger"/>           </move>
-  <move todir="${samples}/service/GPSLoggerController" > <fileset dir="${samples}/GPSLoggerController"/> </move>
-  <move todir="${samples}/service/GPSLoggerViewer"     > <fileset dir="${samples}/GPSLoggerViewer"/>     </move>
-  <move todir="${samples}/service/MailController"      > <fileset dir="${samples}/MailController"/>      </move>
-  <move todir="${samples}/service/MailService"         > <fileset dir="${samples}/MailService"/>         </move>
-  <move todir="${samples}/service/MailViewer"          > <fileset dir="${samples}/MailViewer"/>          </move>
+  <move todir="${samples}/app/Breakout"    failonerror="no"> <fileset dir="${samples}/Breakout"/>    </move>
+  <move todir="${samples}/app/Scape"       failonerror="no"> <fileset dir="${samples}/Scape"/>       </move>
+  <move todir="${samples}/app/Calculator"  failonerror="no"> <fileset dir="${samples}/Calculator"/>  </move>
+  <move todir="${samples}/app/BtChat"      failonerror="no"> <fileset dir="${samples}/BtChat"/>      </move>
+  <move todir="${samples}/app/WorldWatch"  failonerror="no"> <fileset dir="${samples}/WorldWatch"/>  </move>
+                                   
+  <move todir="${samples}/service/GPSLogger"           failonerror="no"> <fileset dir="${samples}/GPSLogger"/>           </move>
+  <move todir="${samples}/service/GPSLoggerController" failonerror="no"> <fileset dir="${samples}/GPSLoggerController"/> </move>
+  <move todir="${samples}/service/GPSLoggerViewer"     failonerror="no"> <fileset dir="${samples}/GPSLoggerViewer"/>     </move>
+  <move todir="${samples}/service/MailController"      failonerror="no"> <fileset dir="${samples}/MailController"/>      </move>
+  <move todir="${samples}/service/MailService"         failonerror="no"> <fileset dir="${samples}/MailService"/>         </move>
+  <move todir="${samples}/service/MailViewer"          failonerror="no"> <fileset dir="${samples}/MailViewer"/>          </move>
    
 </target>   
 
