--- a/TotalCrossSDK/build.xml
+++ b/TotalCrossSDK/build.xml
@@ -39,6 +39,7 @@
 <property name="output"                 value="${sdk.root}/../../temp"/>
 <property name="target"                 value="${sdk.root}/../../output"/>
 <property name="dist"                   value="${sdk.root}/dist"/>
+<property name="lb.src"                 value="${sdk.root}/../../Litebase/LitebaseSDK/src/java"/>
 
 <!-- defined alxjoin task -->	
 <taskdef name="alxjoin" classname="tc.tools.ant.AlxJoin" classpath="${tools}/ant/tctasks.jar" />
@@ -425,14 +426,19 @@ target: javadoc
 
   <delete failonerror="false"><fileset dir="${output}/javadoc"/></delete>
   <mkdir dir="${output}/javadoc" />
-  <copy todir="${output}/javadoc">
-    <fileset dir="${src}"
-    excludes="**/*4A*,**/*4B*,**/*4D*,tc/**,ras/**,totalcross/pim/**,totalcross/zxing/**,totalcross/android/**,totalcross/sql/sqlite4j/**"/>
-  </copy>
 
-  <echo message="Removing 4D and 4B methods" />
+  <!-- join lb javadoc -->  
+  <copy todir="${output}/javadoc"><fileset dir="${lb.src}" excludes="**/*4D*,tc/**,litebase/android/**"/></copy>
+  <replace dir="${output}/javadoc/litebase" token="native public" value="//native public"><include name="**/*.java"/></replace>
+  <replace dir="${output}/javadoc/litebase" token="public static native" value="//public static native"><include name="**/*.java"/></replace>
+  <replace dir="${output}/javadoc/litebase" token="native static" value="//native static"><include name="**/*.java"/></replace>
+
+  <copy todir="${output}/javadoc">
+    <fileset dir="${src}" excludes="**/*4A*,**/*4B*,**/*4D*,tc/**,ras/**,totalcross/pim/**,totalcross/zxing/**,totalcross/android/**,totalcross/sql/sqlite4j/**"/>
+  </copy>
+  <echo message="Removing 4D methods" />
   <taskdef name="removemethod" classname="tc.tools.ant.RemoveMethod" classpath="${etc}/tools/ant/tctasks.jar" />
-  <removemethod methodname=".+(4B|4D)" keeporiginal="false">
+  <removemethod methodname=".+(4D)" keeporiginal="false">
     <fileset dir="${output}/javadoc" includes="totalcross/**/*.java" />
   </removemethod>
   
@@ -460,7 +466,7 @@ target: javadoc
     <arg line="-windowtitle 'TotalCross SDK ${versionStr}'"/>
     <arg line="-d ${docs}/html"/>
     <arg line="-source 1.2"/>
-    <arg line="-subpackages totalcross"/>
+    <arg line="-subpackages litebase -subpackages totalcross"/>
   </exec>
 
   <!-- replace all references in the javadocs, even if they don't create a link. -->
