creates the rar file used in linux

--- a/TotalCrossVM/builders/build.xml
+++ b/TotalCrossVM/builders/build.xml
@@ -312,7 +312,7 @@ target: buildInstalls - run installshield to create the SDK and Samples
   <property name="target.file"  value="${target.sdk.path}/../TotalCross3"/>
 
   <!-- delete old files -->
-  <delete file="${target.file}.exe" />
+  <delete file="${target.file}" />
 
   <!-- update readme files -->
   <copy file="SDK_sfx.diz" toDir="${rootpath}/">
@@ -323,7 +323,10 @@ target: buildInstalls - run installshield to create the SDK and Samples
 
   <echo message="Creating ${target.file} file..."/>
   <exec dir="${rootpath}/" executable="${winrar.path}/rar.exe" failonerror="yes">
-     <arg line='a -sfx -y -ep1 -m5 -r -s -idq -zSDK_sfx.diz ${target.file} ${target.sdk3.path}\*.*'/>
+     <arg line='a -sfx -y -ep1 -m5 -md64m -ma5 -r -s -idq -zSDK_sfx.diz ${target.file}.exe ${target.sdk3.path}\*.*'/>
+  </exec>
+  <exec dir="${rootpath}/" executable="${winrar.path}/rar.exe" failonerror="yes">
+     <arg line='a -y -ep1 -m5 -r -s -idq -zSDK_sfx.diz ${target.file}.rar ${target.sdk3.path}\*.*'/>
   </exec>
 
   <!-- delete temp files -->
