--- a/TotalCrossSDK/build.xml
+++ b/TotalCrossSDK/build.xml
@@ -466,6 +466,7 @@ target: javadoc
     <arg line="-sourcepath ${output}/javadoc"/>
     <arg line="-windowtitle 'TotalCross SDK ${versionStr}'"/>
     <arg line="-d ${docs}/html"/>
+    <arg line="-doctitle 'Please read the changelogs &lt;a href=changelogs.html _target=blank &gt;here&lt;/a&gt;.'"/>
     <arg line="-source 1.2"/>
     <arg line="-subpackages litebase -subpackages totalcross"/>
   </exec>
@@ -474,6 +475,11 @@ target: javadoc
   <replace dir="${docs}/html/" token="java.lang." value="totalcross.lang."><include name="**/*.html"/></replace>
 
   <delete failonerror="false"><fileset dir="${output}/javadoc"/></delete>
+
+  <copy file="${docs}/changelogs.html" todir="${docs}/html"/>
+
+  <property name="buildNumber" value="0" />
+  <replace file="${docs}/changelogs.html" token="@@@" value="${buildNumber}"/>
 
 </target>
 
