--- a/TotalCrossVM/builders/build.xml
+++ b/TotalCrossVM/builders/build.xml
@@ -194,7 +194,7 @@ target: buildSkeleton - Build the folders
    <ant antfile="build.xml" dir="${source.sdk.path}" target="clean"           inheritAll="false"/>
    <ant antfile="build.xml" dir="${source.sdk.path}" target="build"           inheritAll="false"/>
    <ant antfile="build.xml" dir="${source.sdk.path}" target="javadoc"         inheritAll="false">
-      <param name="buildNumber" value="${buildNumber}"/>
+      <property name="buildNumber" value="${buildNumber}"/>
    </ant>
 
    <!-- copy the changed files to the release folder -->
