--- a/TotalCrossSDK/build.xml
+++ b/TotalCrossSDK/build.xml
@@ -479,7 +479,9 @@ target: javadoc
   <copy file="${docs}/changelogs.html" todir="${docs}/html"/>
 
   <property name="buildNumber" value="0" />
-  <replace file="${docs}/html/changelogs.html" token="@@@" property="buildNumber"/>
+  <replace file="${docs}/html/changelogs.html">
+   <replacefilter token="@@@" property="buildNumber" />
+  </replace> 
 
 </target>
 
