give up on changing the token in the changelogs. ant isnt able to use the value of a property.

--- a/TotalCrossSDK/build.xml
+++ b/TotalCrossSDK/build.xml
@@ -478,12 +478,7 @@ target: javadoc
 
   <copy file="${docs}/changelogs.html" todir="${docs}/html"/>
 
-  <property name="buildNumber" value="0" />
-  <replace file="${docs}/html/changelogs.html"> 
-    <expandproperties />
-    <replacetoken>@@@</replacetoken> 
-    <replacevalue>${buildNumber}</replacevalue>
-  </replace>
+  <!--replace file="${docs}/html/changelogs.html" token="@@@" value="@@BUILD_NUMBER@@"/-->
 
 </target>
 
