--- a/TotalCrossVM/builders/android/apps/tcvm/.classpath
+++ b/TotalCrossVM/builders/android/apps/tcvm/.classpath
@@ -7,5 +7,8 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="lib" path="P:/android-sdk-windows/platforms/android-11/android.jar"/>
 	<classpathentry kind="lib" path="libs/DataCollection.jar"/>
+	<classpathentry kind="lib" path="libs/activation.jar"/>
+	<classpathentry kind="lib" path="libs/additionnal.jar"/>
+	<classpathentry kind="lib" path="libs/mail.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
