--- a/TotalCrossVM/builders/android/apps/tcvm/AndroidManifest.xml
+++ b/TotalCrossVM/builders/android/apps/tcvm/AndroidManifest.xml
@@ -11,7 +11,7 @@
     P:\gitrepo\TotalCross\TotalCrossVM\builders\android\apps\tcvm\AndroidManifest.xml -->
 
     <application android:icon="@drawable/icon" android:label="TotalCross Virtual Machine"
-         android:theme="@android:style/Theme.Black.NoTitleBar" >
+         android:theme="@android:style/Theme.Black.NoTitleBar" android:debuggable="false">
         <activity android:name=".Loader" 
         android:configChanges="keyboardHidden|orientation|screenLayout|fontScale|keyboard" 
         android:windowSoftInputMode="adjustResize"
