added some scanner drivers to build with vc2008

--- a/TotalCrossVM/builders/vc2008/TCVM.vcproj
+++ b/TotalCrossVM/builders/vc2008/TCVM.vcproj
@@ -1411,6 +1411,7 @@
 				MinimalRebuild="true"
 				RuntimeLibrary="1"
 				StructMemberAlignment="3"
+				FloatingPointModel="0"
 				PrecompiledHeaderFile="$(IntDir)\TCVM.pch"
 				AssemblerListingLocation="$(IntDir)\"
 				ObjectFile="$(IntDir)\"
