--- a/TotalCrossVM/builders/vc2008/Conduit.vcproj
+++ b/TotalCrossVM/builders/vc2008/Conduit.vcproj
@@ -29,7 +29,7 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Updating TCSync.dll"
-				CommandLine="xcopy /R /Y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\..\..\..\TotalCrossSDK\dist\vm\$(PlatformName)&quot;"
+				CommandLine="xcopy /R /Y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\..\..\..\TotalCrossSDK\dist\vm\$(PlatformName)&quot;&#x0D;&#x0A;"
 				Outputs="TCSync.dll"
 			/>
 			<Tool
@@ -119,7 +119,7 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Updating TCSync.dll"
-				CommandLine="xcopy /R /Y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\..\..\..\TotalCrossSDK\dist\vm\$(PlatformName)&quot;"
+				CommandLine="xcopy /R /Y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\..\..\..\TotalCrossSDK\dist\vm\$(PlatformName)&quot;&#x0D;&#x0A;"
 				Outputs="TCSync.dll"
 			/>
 			<Tool
@@ -208,7 +208,7 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Updating TCSync.dll"
-				CommandLine="xcopy /R /Y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\..\..\..\TotalCrossSDK\dist\vm\$(PlatformName)&quot;"
+				CommandLine="xcopy /R /Y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\..\..\..\TotalCrossSDK\dist\vm\$(PlatformName)&quot;&#x0D;&#x0A;"
 				Outputs="TCSync.dll"
 			/>
 			<Tool
@@ -298,7 +298,7 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Updating TCSync.dll"
-				CommandLine="xcopy /R /Y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\..\..\..\TotalCrossSDK\dist\vm\$(PlatformName)&quot;"
+				CommandLine="xcopy /R /Y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\..\..\..\TotalCrossSDK\dist\vm\$(PlatformName)&quot;&#x0D;&#x0A;"
 				Outputs="TCSync.dll"
 			/>
 			<Tool
@@ -387,7 +387,7 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Updating TCSync.dll"
-				CommandLine="xcopy /R /Y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\..\..\..\TotalCrossSDK\dist\vm\$(PlatformName)&quot;"
+				CommandLine="xcopy /R /Y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\..\..\..\TotalCrossSDK\dist\vm\$(PlatformName)&quot;&#x0D;&#x0A;"
 				Outputs="TCSync.dll"
 			/>
 			<Tool
@@ -477,7 +477,7 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Updating TCSync.dll"
-				CommandLine="xcopy /R /Y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\..\..\..\TotalCrossSDK\dist\vm\$(PlatformName)&quot;"
+				CommandLine="xcopy /R /Y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\..\..\..\TotalCrossSDK\dist\vm\$(PlatformName)&quot;&#x0D;&#x0A;"
 				Outputs="TCSync.dll"
 			/>
 			<Tool
@@ -566,7 +566,7 @@
 			<Tool
 				Name="VCCustomBuildTool"
 				Description="Updating TCSync.dll"
-				CommandLine="xcopy /R /Y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\..\..\..\TotalCrossSDK\dist\vm\$(PlatformName)&quot;"
+				CommandLine="xcopy /R /Y &quot;$(TargetPath)&quot; &quot;$(SolutionDir)\..\..\..\TotalCrossSDK\dist\vm\$(PlatformName)&quot;&#x0D;&#x0A;"
 				Outputs="TCSync.dll"
 			/>
 			<Tool
