fixed wince projects

--- a/TotalCrossVM/builders/vc2008/Conduit.vcproj
+++ b/TotalCrossVM/builders/vc2008/Conduit.vcproj
@@ -498,6 +498,7 @@
 				MinimalRebuild="true"
 				RuntimeLibrary="2"
 				StructMemberAlignment="3"
+				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				BrowseInformation="0"
