--- a/TotalCrossVM/builders/vc2008/Dolphin.vcproj
+++ b/TotalCrossVM/builders/vc2008/Dolphin.vcproj
@@ -4,6 +4,7 @@
 	Version="9,00"
 	Name="Dolphin"
 	ProjectGUID="{2FA90BFC-ACFD-49FE-8589-EAA892EE0098}"
+	RootNamespace="Dolphin"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
@@ -45,6 +46,7 @@
 				PreprocessorDefinitions="SCAN_EXPORTS;WINCE;WIN32;_DEBUG;_WIN32_WCE=$(CEVER);UNDER_CE;$(PLATFORMDEFINES);DEBUG;_WINDOWS;_USRDLL;ARM;_ARM;_UNICODE;UNICODE"
 				MinimalRebuild="true"
 				RuntimeLibrary="1"
+				StructMemberAlignment="3"
 				BufferSecurityCheck="false"
 				FloatingPointModel="0"
 				UsePrecompiledHeader="0"
@@ -108,10 +110,11 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Pocket PC 2003 (ARMV4)"
-			OutputDirectory="$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)/../../../../output/vc2008/$(PlatformName)/Release"
+			IntermediateDirectory="$(SolutionDir)/../../../../temp/vc2008/$(PlatformName)/Dolphin/$(ConfigurationName)"
 			ConfigurationType="2"
 			CharacterSet="1"
+			BuildLogFile="$(IntDir)\BuildLog.htm"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -133,11 +136,16 @@
 				ExecutionBucket="7"
 				Optimization="2"
 				FavorSizeOrSpeed="2"
-				PreprocessorDefinitions="NDEBUG;_WIN32_WCE=$(CEVER);UNDER_CE;$(PLATFORMDEFINES);WINCE;_WINDOWS;_USRDLL;DOLPHIN_EXPORTS;$(ARCHFAM);$(_ARCHFAM_);_UNICODE;UNICODE"
+				AdditionalIncludeDirectories="..\..\src\util;..\..\src\tcvm;"
+				PreprocessorDefinitions="SCAN_EXPORTS;NDEBUG;_WIN32_WCE=$(CEVER);UNDER_CE;$(PLATFORMDEFINES);WINCE;_WINDOWS;_USRDLL;DOLPHIN_EXPORTS;$(ARCHFAM);$(_ARCHFAM_);_UNICODE;UNICODE"
 				RuntimeLibrary="0"
+				StructMemberAlignment="3"
+				BufferSecurityCheck="false"
+				FloatingPointModel="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="3"
+				CompileAs="1"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -153,12 +161,12 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalOptions=" /subsystem:windowsce,4.20 /machine:ARM /ARMPADCODE"
+				AdditionalOptions=" /subsystem:windowsce,4.20 /machine:THUMB"
 				OutputFile="$(OutDir)/Dolphin.dll"
 				LinkIncremental="1"
 				DelayLoadDLLs="$(NOINHERIT)"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(OutDir)/Dolphin.pdb"
+				ProgramDatabaseFile="$(IntDir)/Dolphin.pdb"
 				SubSystem="0"
 				StackReserveSize="65536"
 				StackCommitSize="4096"
@@ -166,7 +174,7 @@
 				EnableCOMDATFolding="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
-				ImportLibrary="$(OutDir)/Dolphin.lib"
+				ImportLibrary="$(IntDir)/Dolphin.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
