--- a/TotalCrossVM/builders/vc2008/Motorola.vcproj
+++ b/TotalCrossVM/builders/vc2008/Motorola.vcproj
@@ -112,10 +112,11 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Pocket PC 2003 (ARMV4)"
-			OutputDirectory="$(PlatformName)\$(ConfigurationName)"
-			IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)/../../../../output/vc2008/$(PlatformName)/Release"
+			IntermediateDirectory="$(SolutionDir)/../../../../temp/vc2008/$(PlatformName)/Motorola/$(ConfigurationName)"
 			ConfigurationType="2"
 			CharacterSet="1"
+			BuildLogFile="$(IntDir)\BuildLog.htm"
 			>
 			<Tool
 				Name="VCPreBuildEventTool"
@@ -137,8 +138,12 @@
 				ExecutionBucket="7"
 				Optimization="2"
 				FavorSizeOrSpeed="2"
-				PreprocessorDefinitions="NDEBUG;_WIN32_WCE=$(CEVER);UNDER_CE;$(PLATFORMDEFINES);WINCE;_WINDOWS;_USRDLL;MOTOROLA_EXPORTS;$(ARCHFAM);$(_ARCHFAM_);_UNICODE;UNICODE"
+				AdditionalIncludeDirectories="..\..\src\util;..\..\src\tcvm;P:\extlibs\WindowsCE\wce300\PPT2800 PPC\include"
+				PreprocessorDefinitions="SCAN_EXPORTS;WIN32;NDEBUG;_WIN32_WCE=$(CEVER);UNDER_CE;$(PLATFORMDEFINES);WINCE;_WINDOWS;_USRDLL;MOTOROLA_EXPORTS;$(ARCHFAM);$(_ARCHFAM_);_UNICODE;UNICODE"
 				RuntimeLibrary="0"
+				StructMemberAlignment="3"
+				BufferSecurityCheck="false"
+				FloatingPointModel="0"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="3"
@@ -157,12 +162,14 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalOptions=" /subsystem:windowsce,4.20 /machine:ARM /ARMPADCODE"
+				AdditionalOptions=" /subsystem:windowsce,4.20 /machine:THUMB"
+				AdditionalDependencies="RCMapi32.lib scnapi32.lib"
 				OutputFile="$(OutDir)/Motorola.dll"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="P:\extlibs\WindowsCE\wce300\PPT2800 PPC\lib\ARM"
 				DelayLoadDLLs="$(NOINHERIT)"
 				GenerateDebugInformation="true"
-				ProgramDatabaseFile="$(OutDir)/Motorola.pdb"
+				ProgramDatabaseFile="$(IntDir)/Motorola.pdb"
 				SubSystem="0"
 				StackReserveSize="65536"
 				StackCommitSize="4096"
@@ -170,7 +177,7 @@
 				EnableCOMDATFolding="2"
 				RandomizedBaseAddress="1"
 				DataExecutionPrevention="0"
-				ImportLibrary="$(OutDir)/Motorola.lib"
+				ImportLibrary="$(IntDir)/Motorola.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
